--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,4 +1,37 @@
-/* Global Styles */
+/*.hmpg-outer-wrapper {*/
+/*background:*/
+/*!* transparent bg, faked with gradient *!*/
+/*!*linear-gradient(*!*/
+/*!*rgba(33, 150, 243, 0.68),*!*/
+/*!*rgba(33, 150, 243, 0.68)*!*/
+/*!*),*!*/
+
+/*linear-gradient(*/
+/*rgba(0, 0, 0, 0.6),*/
+/*rgba(0, 0, 0, 0.6)*/
+/*),*/
+/*url(../img/bgimg.jpeg) no-repeat center center scroll;*/
+/*display: table;*/
+/*position: relative;*/
+/*width: 100%;*/
+/*height: 100%;*/
+/*-webkit-background-size: cover;*/
+/*-moz-background-size: cover;*/
+/*background-size: cover;*/
+/*-o-background-size: cover;*/
+/*}*/
+
+/*.hmpg-inner-wrapper {*/
+/*display: table-cell;*/
+/*text-align: center;*/
+/*vertical-align: middle;*/
+/*}*/
+
+
+
+/*===========================================================*/
+    /* Global Styles */
+/*===========================================================*/
 
 html,
 body {
@@ -6,50 +39,192 @@ body {
     height: 100%;
 }
 
-/* CTA buttons */
-.btn-primary {
-    background-color: rgba(255, 0, 0, 0.75);
-    border:0;
-    margin-bottom:25px;
-}
-
-.btn-primary:hover {
-    background-color: rgba(255, 0, 0, 10);
-}
-
-/* Local Styles */
-
-.homepage-outercontainer {
+/* set background image and tint */
+body {
+    /*background-image: url("../img/bgimg.jpeg");*/
+    /*background-size: cover;*/
     background:
-        /* transparent bg, faked with gradient */
-        /*linear-gradient(*/
-        /*rgba(33, 150, 243, 0.68),*/
-        /*rgba(33, 150, 243, 0.68)*/
-        /*),*/
-
             linear-gradient(
                     rgba(0, 0, 0, 0.6),
                     rgba(0, 0, 0, 0.6)
             ),
             url(../img/bgimg.jpeg) no-repeat center center scroll;
-
-
-    display: table;
-    position: relative;
-    width: 100%;
-    height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
 }
 
-.homepage-innercontainer {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+/* CTA buttons styling */
+.btn-primary {
+    background-color: rgba(255, 0, 0, 0.75);
+    border:0;
+    margin-bottom:25px;
 }
+
+/* CTA buttons hover effect */
+.btn-primary:hover {
+    background-color: rgba(255, 0, 0, 10);
+}
+
+/*CTA Text Color*/
+.ctatext {
+    color: #ded2d2;
+}
+
+
+/*===========================================================*/
+    /* Local Styles */
+/*===========================================================*/
+
+
+/* center content on home page */
+.hmpg-inner-wrapper {
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+}
+
 
 h3 {
     color: #fff;
 }
+
+
+
+
+
+
+
+
+#unstickyheader {
+    margin-bottom: 15px;
+}
+
+#stickyheader {
+    width: 100%;
+    height: 10px;
+}
+
+#othercontent {
+    margin-top: 175px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.main-wrapper {*/
+    /*background:*/
+        /*!* transparent bg, faked with gradient *!*/
+        /*!*linear-gradient(*!*/
+        /*!*rgba(33, 150, 243, 0.68),*!*/
+        /*!*rgba(33, 150, 243, 0.68)*!*/
+        /*!*),*!*/
+
+            /*linear-gradient(*/
+                    /*rgba(0, 0, 0, 0.6),*/
+                    /*rgba(0, 0, 0, 0.6)*/
+            /*),*/
+            /*url(../img/bgimg.jpeg) no-repeat center center scroll;*/
+    /*display: table;*/
+    /*position: relative;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*background-size: cover;*/
+    /*-o-background-size: cover;*/
+/*}*/
+
+
+.main-wrapper {
+    background-color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.header {*/
+    /*margin-top:60px;*/
+/*}*/
+
+/*button, input, select, textarea {*/
+    /*background-color: #fff;*/
+/*}*/
+
+/*h4 {*/
+    /*color: #fff;*/
+/*}*/
+
+
+
+/*h2 {*/
+    /*color: #00a9ff;*/
+/*}*/
+
+
+/*!*question number style*!*/
+/*.badge {*/
+    /*background-color: #00a9ff;*/
+    /*font-size:25px;*/
+    /*width:70px;*/
+/*}*/
+
+/*!*about style*!*/
+/*.about-badge {*/
+    /*background-color: #ff0000;*/
+    /*font-size:25px;*/
+    /*width:150px;*/
+    /*padding:10px;*/
+/*}*/
+
+/*.question-wrapper {*/
+    /*!*background-color: rgba(222,254,255,.15);*!*/
+    /*!*background-color: rgba(0,0,0,.15);*!*/
+    /*background-color: rgba(205,220,57,.44);*/
+    /*padding:15px 15px 15px 15px;*/
+    /*margin-top:5px;*/
+    /*margin-bottom:5px;*/
+/*}*/
+
+/*.userinput-wrapper {*/
+    /*background-color: rgba(255,0,0,.44);*/
+    /*padding:15px 15px 15px 15px;*/
+    /*margin-top:5px;*/
+    /*margin-bottom:5px;*/
+/*}*/
