--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -60,8 +60,6 @@ h4 {
     color: #fff;
 }
 
-
-
  /*set background image and tint*/
 .survey-content-wrapper {
     /*background-image: url("../img/hmpgbgimg.jpeg");*/
@@ -79,7 +77,6 @@ h4 {
     height:100%;
 }
 
-
 img {
     margin-top:100px;
 }
@@ -94,7 +91,6 @@ img {
     color: #000;
     font-family: 'Sansita', sans-serif;
 }
-
 
 .userinput-wrapper {
     margin-top:30px;
@@ -127,6 +123,7 @@ img {
 
 .question-wrapper {
     background-color: rgba(0, 0, 0, 0.4);
+    /*background-color: rgba(158, 158, 158, 0.4);*/
     padding:15px 15px 15px 15px;
     margin-top:5px;
     margin-bottom:5px;
