--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -5,6 +5,17 @@ html,
 body {
     width: 100%;
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
+}
+
+
+h3 {
+    color: #fff;
+    font-family: 'Sansita', sans-serif;
+}
+
+h4 {
+    color: #fff;
 }
 
 /* CTA buttons styling */
@@ -14,7 +25,6 @@ body {
     margin-bottom:25px;
     font-family: 'Sansita', sans-serif;
 }
-
 
 /* CTA buttons hover effect */
 .btn-primary:hover {
@@ -50,16 +60,6 @@ body {
     width: 100%;
 }
 
-
-h3 {
-    color: #fff;
-    font-family: 'Sansita', sans-serif;
-}
-
-h4 {
-    color: #fff;
-}
-
  /*set background image and tint*/
 .survey-content-wrapper {
     /*background-image: url("../img/hmpgbgimg.jpeg");*/
@@ -77,19 +77,8 @@ h4 {
     height:100%;
 }
 
-img {
+#logo-small-img {
     margin-top:100px;
-}
-
-.surveyh3 {
-    color: #000;
-    font-family: 'Sansita', sans-serif;
-
-}
-
-.surveyh4 {
-    color: #000;
-    font-family: 'Sansita', sans-serif;
 }
 
 .userinput-wrapper {
@@ -102,8 +91,13 @@ img {
     border-radius:5px 5px 0 0;
 }
 
+.redbar-styleonly {
+    height:10px;
+    background-color: rgba(255, 0, 0, 0.75);
+}
+
 .question-main-wrapper {
-    padding:20px;
+    /*padding:20px;*/
     overflow-x: hidden;
     max-height: 100vh;
 }
@@ -112,10 +106,10 @@ img {
     .question-main-wrapper {
         width:50%;
         margin:auto;
+        /*make it so div scrolls up instead of extending below main image*/
         overflow-x: hidden;
         max-height: 100vh;
     }
-
 }
 
 .form-control {
@@ -124,7 +118,6 @@ img {
 
 .question-wrapper {
     background-color: rgba(0, 0, 0, 0.4);
-    /*background-color: rgba(158, 158, 158, 0.4);*/
     padding:15px 15px 15px 15px;
     margin-top:5px;
     margin-bottom:5px;
@@ -135,6 +128,8 @@ img {
     background-color: rgba(139,195,74,10);
     font-size:25px;
     width:70px;
+    height:35px;
+    font-family: 'Sansita', sans-serif;
 }
 
 input, select, textarea {
@@ -160,16 +155,39 @@ input, select, textarea {
     font-family: 'Sansita', sans-serif;
 }
 
+.result-modal-body {
+    position: relative;
+    height:450px;
+}
+
+#matchImg {
+    width:250px; /* This value will depend on what size you want for your loading image, let's say it's 50px */
+    height: 380px;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-top:-190px; /* This needs to be half of the height */
+    margin-left:-125px; /* This needs to be half of the width */
+    padding-top:60px;
+}
+
 .modalbutton {
     background-color: rgba(255, 0, 0, 10);
     border:0;
     font-family: 'Sansita', sans-serif;
 }
 
-
-.redbar-styleonly {
-    height:10px;
-    background-color: rgba(255, 0, 0, 0.75);
+.surveyh3 {
+    color: #000;
+    font-family: 'Sansita', sans-serif;
 }
 
+.surveyh4 {
+    color: #000;
+    font-family: 'Sansita', sans-serif;
+}
+
+a {
+    color: #009fff;
+}
 
