--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,6 @@
+@charset "utf-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet);
+
 /*===========================================================*/
     /* Global Styles */
 /*===========================================================*/
