--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');
+@import url('//fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');
 
 /*===========================================================*/
     /* Global Styles */
