--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');
 /*===========================================================*/
     /* Global Styles */
 /*===========================================================*/
@@ -6,13 +6,13 @@ html,
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
 h3 {
     color: #fff;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 h4 {
@@ -24,7 +24,7 @@ h4 {
     background-color: rgba(255, 0, 0, 0.75);
     border:0;
     margin-bottom:25px;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 /* CTA buttons hover effect */
@@ -130,7 +130,7 @@ h4 {
     font-size:25px;
     width:70px;
     height:35px;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 input, select, textarea {
@@ -147,7 +147,7 @@ input, select, textarea {
     background-position: center;
     text-align: center;
     text-transform: uppercase;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 .result-modal-content {
@@ -175,17 +175,17 @@ input, select, textarea {
 .modalbutton {
     background-color: rgba(255, 0, 0, 10);
     border:0;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 .surveyh3 {
     color: #000;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 .surveyh4 {
     color: #000;
-    font-family: 'Sansita', sans-serif !important;
+    font-family: 'Sansita', sans-serif;
 }
 
 a {
