adjusted font import

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');*/
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Sansita:700i');
+
 /*===========================================================*/
     /* Global Styles */
 /*===========================================================*/
